append hash into input field

--- a/index.html
+++ b/index.html
@@ -14,13 +14,33 @@
 <body>
   <section class="section">
     <div class="container">
-      <h1 class="title">
-      <a href="https://betkumi.com/" target="_blank">BETKUMI</a>
-      - Game Verification Script</h1>
-      <h2 class="subtitle">
-        Third party script used to verify games on BETKUMI.COM
-      </h2>
+      <div class="columns ">
+        <div class="column">
+
+          <h1 class="title">
+          <a href="https://betkumi.com/" target="_blank">BETKUMI</a>
+          - Game Verification Script</h1>
+          <h2 class="subtitle">
+            Third party script used to verify games on BETKUMI.COM
+          </h2>
+        </div>
+             
+
+        <div class="column ">
+
+          <div class="field is-grouped">
+            <p class="control">
+              <a href="https://github.com/onsare/betkumi-crash" target="_blank" class="button is-info" >
+                <i class="fa fa-github"></i>&nbsp;
+                View Source Code
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+
     </div>
+
     <hr>
     <div class="container">
       <div class="field">
