--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
           <div class="field is-grouped">
             <p class="control">
-              <a href="https://github.com/onsare/betkumi-crash" target="_blank" class="button is-info" >
+              <a href="https://github.com/betkumi/verify" target="_blank" class="button is-info" >
                 <i class="fa fa-github"></i>&nbsp;
                 View Source Code
               </a>
